# agent-jail

./: Cargo.toml  Dockerfile  SPEC.md  railway.toml
.github/workflows/: ci.yml
src/: api.rs  config.rs  cost.rs  error.rs  executor.rs  lib.rs  llm.rs  main.rs  state.rs  storage.rs  terminal.rs  types.rs
src/jail/: firecracker.rs  mod.rs  namespace.rs
src/observe/: filesystem.rs  mod.rs  network.rs  process.rs  syscall.rs
src/rootfs/: mod.rs  nix.rs
src/snapshot/: branch.rs  criu.rs  mod.rs
tests/: integration.rs
tests/integration/scripts/: combined_test.js  combined_test.py  filesystem_test.js  filesystem_test.py  network_test.js  network_test.py  process_test.js  process_test.py
