[package]
name = "agent-jail"
version = "0.1.0"
edition = "2021"
authors = ["AMAI Labs"]
description = "Observable sandbox for autonomous agents — syscall/fs/net microscope + snapshot/branch"

[features]
default = []
privileged = []  # Enable tests requiring root (namespaces, eBPF, CRIU)

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Concurrent data structures
dashmap = "6"

# Time + IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client (for mock-llm-service integration)
reqwest = { version = "0.12", features = ["json"] }

# Streaming
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Linux-specific (namespace, mount, signal, etc.)
nix = { version = "0.29", features = ["sched", "mount", "signal", "user", "fs", "process"] }

[target.'cfg(target_os = "linux")'.dependencies]
# eBPF (Aya userspace)
aya = "0.13"
aya-log = "0.2"

# Cgroup v2
cgroups-rs = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
